--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ button:focus {
     var(--clr-neutral-600),
     var(--clr-neutral-700) 20%
   );
-  padding: 1.5rem;
+  padding: 2rem 1.5rem;
   width: 90%;
   margin: auto;
   border-radius: 1rem;
@@ -126,4 +126,17 @@ button:focus {
 .submit-btn:focus {
   color: var(--clr-primary);
   background-color: var(--clr-neutral-100);
+}
+
+#thanks-content {
+  text-align: center;
+}
+
+.selected-text {
+  color: var(--clr-primary);
+  background-color: var(--clr-neutral-600);
+  border-radius: 2rem;
+  padding: 0.5rem 1rem;
+  margin: 2rem auto;
+  width: fit-content;
 }
